# Web_app_hackathon_2021

./: README.md  asset-manifest.json  clean_docker.sh  docker-compose.yaml  index.html
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  celery_start.sh  pyproject.toml
backend/core/: local_logging.py  local_typing.py  tasks.py  typing.py
backend/nlp/: helpers.py  nlp.py  stop_words_ukrainian
backend/parsers/: __init__.py  metro.py
backend/processing/: postprocessing.py  processing.py
backend/providers/: __init__.py  atb.py  eko.py  helpers.py  metro.py  user_agents.json
backend/web/: __init__.py  api.py  app.py  models.py  route.py  uwsgi.ini  wsgi_wrapper.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/Data/: api-types.ts  apiClient.ts
frontend/src/Data/Mocks/: data.json  (+1 more)
static/css/: main.a89770f9.chunk.css  main.a89770f9.chunk.css.map  main.b5116ad2.chunk.css  main.b5116ad2.chunk.css.map
static/js/: 2.677cda56.chunk.js  2.677cda56.chunk.js.map  2.77dfec93.chunk.js  2.77dfec93.chunk.js.map  2.9b01076c.chunk.js  2.9b01076c.chunk.js.map  3.24861a67.chunk.js  3.24861a67.chunk.js.map  3.4be20f7e.chunk.js  3.4be20f7e.chunk.js.map  main.5def6579.chunk.js  main.5def6579.chunk.js.map  main.618a872a.chunk.js  main.618a872a.chunk.js.map  main.62a444be.chunk.js  main.62a444be.chunk.js.map  main.77201d19.chunk.js  main.77201d19.chunk.js.map  runtime-main.49cf5923.js  runtime-main.49cf5923.js.map  runtime-main.5726f9d1.js  runtime-main.5726f9d1.js.map
(+19 files in other folders)
