[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alex Work Laptop <tarasik201617@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
Flask = "^1.1.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
pydantic = "^1.7.3"
uWSGI = "^2.0.19"
tokenize_uk = "^0.2.0"
uk-stemmer = {git = "https://github.com/Desklop/Uk_Stemmer"}
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
mypy = "^0.790"
pylint = "^2.6.0"
flake8 = "^3.8.4"
isort = "^5.7.0"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint]
[tool.pylint.basic]
good-names = ["df", "fp", "ex"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
